# chatbot-backbone

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  roadmap.md  status.md
alembic/: env.py
alembic/versions/: 0001_create_chat_tables.py  0002_create_document_tables.py  0003_add_chunk_embeddings.py  0004_add_document_failure_reason.py  0005_create_tool_runs_table.py  0006_add_memory_tables.py  0007_add_auth_and_owner_scoping.py
evals/: chat_tool_regression.json  guardrails_jailbreak.json  memory_regression.json  rag_retrieval_baseline.json
evals/fixtures/: billing_faq.md  incident_runbook.md  product_overview.md
src/chatbot_api/: __init__.py  auth.py  celery_app.py  chat_eval.py  create_api_key.py  database.py  document_embeddings.py  document_ingestion.py  document_tasks.py  embeddings.py  eval_common.py  eval_suite.py  guardrails.py  guardrails_eval.py  main.py  memory.py  memory_eval.py  models.py  observability.py  providers.py  rag_eval.py  reindex_embeddings.py  repositories.py  (+10 more)
tests/: test_chat.py  test_chat_eval.py  test_document_embeddings.py  test_document_ingestion.py  test_documents.py  test_eval_suite.py  test_guardrails.py  test_guardrails_eval.py  test_health.py  test_memory_api.py  test_memory_eval.py  test_migrations.py  test_observability.py  test_rag_eval.py  test_rate_limit.py  test_reindex_embeddings.py  test_repositories.py  test_request_size_limit.py  test_retrieval.py  test_tool_runs_api.py  test_tools.py  test_tracing.py  test_workflow.py  test_workflow_runtime.py
(+21 files in other folders)
