[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "chatbot-api"
version = "0.1.0"
description = "Bootstrap backend for the chatbot project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "celery>=5.5.0,<6.0.0",
  "fastapi>=0.116.0,<1.0.0",
  "langgraph>=1.2.4,<2.0.0",
  "langgraph-checkpoint-postgres>=3.1.0,<4.0.0",
  "langsmith>=0.8.0,<1.0.0",
  "openai>=2.0.0,<3.0.0",
  "pgvector>=0.3.6,<1.0.0",
  "pypdf>=6.0.0,<7.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "sqlalchemy>=2.0.41,<3.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "guardrails-ai>=0.10.2,<0.11.0",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.21.0,<1.0.0",
  "alembic>=1.16.0,<2.0.0",
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.4.0,<9.0.0",
  "ruff>=0.12.0,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/chatbot_api"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
]
